Tests written and the code is starting to come together using machinise and my own web steps

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,4 +2,5 @@
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
-  hello: "Hello world"
+  log_in_prompt: "log in"
+  log_out_prompt: "log out"
